[gd_scene load_steps=16 format=3 uid="uid://sgql6lx2f6sb"]

[ext_resource type="Script" uid="uid://67vysvbj14xl" path="res://scripts/enemy.gd" id="1_sgu6t"]
[ext_resource type="Shader" uid="uid://ci0wv6sfuabrl" path="res://shaders/hitflash.gdshader" id="2_cor2r"]
[ext_resource type="Script" uid="uid://b10ieu4wrw3qq" path="res://scripts/health_component.gd" id="3_ynppj"]
[ext_resource type="Script" uid="uid://cf86idyf4t4np" path="res://scripts/hit_box_component.gd" id="4_6a6gl"]
[ext_resource type="Texture2D" uid="uid://w1irwenkf0ld" path="res://assets/bomb.png" id="5_sgu6t"]
[ext_resource type="PackedScene" uid="uid://yfe745y04s73" path="res://scenes/red_balloon.tscn" id="7_6a6gl"]
[ext_resource type="AudioStream" uid="uid://vdc5gm8aiv0h" path="res://sounds/explosion (1).wav" id="7_ynppj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(54, 57)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nenq2"]
shader = ExtResource("2_cor2r")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(53.5, 56)

[sub_resource type="Gradient" id="Gradient_sgu6t"]
offsets = PackedFloat32Array(0, 0.279412, 0.485294, 0.735294, 1)
colors = PackedColorArray(0.929412, 0.188235, 0.101961, 1, 0.952941, 0.32549, 0.14902, 1, 0.964706, 0.568627, 0.0313726, 1, 0.980392, 0.752941, 0.117647, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cor2r"]
gradient = SubResource("Gradient_sgu6t")

[sub_resource type="Curve" id="Curve_ynppj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6a6gl"]
curve = SubResource("Curve_ynppj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_slcbh"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 20.0
scale_curve = SubResource("CurveTexture_6a6gl")
color_ramp = SubResource("GradientTexture1D_cor2r")

[node name="bomb_enemy" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "hitbox", "enemy_spr") groups=["enemy"]]
script = ExtResource("1_sgu6t")
max_explosion_damage = 100
health = 0.0
health_component = NodePath("HealthComponent")
hitbox = NodePath("HitBoxComponent")
enemy_spr = NodePath("Enemy_Spr")
explosion_radius = 150.0
attack_range = 80.0

[node name="BalloonHolder" type="Node2D" parent="."]
position = Vector2(-14, -23)

[node name="RedBalloon" parent="BalloonHolder" instance=ExtResource("7_6a6gl")]
position = Vector2(9, -19)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_ynppj")
metadata/_custom_type_script = "uid://b10ieu4wrw3qq"

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("4_6a6gl")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cf86idyf4t4np"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_u5sy4")

[node name="Enemy_Spr" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nenq2")
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_sgu6t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_p57ef")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_slcbh")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ynppj")
